--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link rel="icon" type="image/png" href="/code.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -11,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@100;300;400;500;700&family=Signika:wght@300;700&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>Fernando Lagahit</title>
   </head>
   <body class="font-[Poppins]">
     <div id="root"></div>
